# sr_object_tools

./: README.md
sr_object_symmetry/: CMakeLists.txt  README.md  package.xml
sr_object_symmetry/examples/: CMakeLists.txt
sr_object_symmetry/examples/rotational_reflectional/: CMakeLists.txt  main.cpp
sr_object_symmetry/include/sr_object_symmetry/: refinement_base_functor.hpp  reflectional_symmetry.hpp  reflectional_symmetry_detection.h  reflectional_symmetry_detection.hpp  reflectional_symmetry_detection_core.hpp  reflectional_symmetry_scoring.hpp  rotational_symmetry.hpp  rotational_symmetry_detection.h  rotational_symmetry_detection.hpp  rotational_symmetry_detection_core.hpp  rotational_symmetry_scoring.hpp  symmetry_detection.hpp
sr_object_symmetry/include/utilities/: eigen.hpp  map.hpp  std_vector.hpp
sr_object_symmetry/include/utilities/filesystem/: alphanum.hpp  filesystem.hpp
sr_object_symmetry/launch/: sr_object_symmetry.launch
sr_object_symmetry/sample_objects/: banana.ply  cone.ply  cylinder.ply  drill.ply  mug.ply  rect.ply  sphere.ply  taurus.ply
sr_object_symmetry/src/: main.cpp
sr_object_symmetry/symmetry_detection/: reflectional_symmetry.hpp  reflectional_symmetry_detection.h  reflectional_symmetry_detection.hpp  reflectional_symmetry_detection_core.hpp  reflectional_symmetry_scoring.hpp  rotational_symmetry.hpp  rotational_symmetry_detection.h  rotational_symmetry_detection.hpp  rotational_symmetry_detection_core.hpp  rotational_symmetry_scoring.hpp  symmetry_detection.hpp
sr_object_symmetry/utilities/pointcloud/: mesh_to_cloud.hpp
(+16 files in other folders)
