<?xml version="1.0"?>
<package format="2">
  <name>sr_object_symmetry</name>
  <version>0.0.0</version>
  <description>The sr_object_symmetry package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <author>Shadow Robot's software team</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>libpcl-all</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
